2005-09-19  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/dnslookup.c:
	* examples/echoclient-async.c:
	* examples/echoclient-gconn.c:
	* examples/echoclient-udp.c:
	* examples/echoclient.c:
	* examples/echoserver-async.c:
	* examples/echoserver-gserver.c:
	* examples/echoserver-partyline.c: (ob_sig_int):
	* examples/echoserver-udp.c:
	* examples/echoserver.c:
	* examples/hash.c:
	* examples/hfetch.c:
	* examples/hostinfo.c:
	* examples/sdr.c:
	  Relicense these examples from GPL to LGPL (as approved by the
	  copyright holder, David Helder, on the gnet mailing list,
	  Message ID: <f688e4613fd4e6bd85847dca4a4f60f3@gizmolabs.org>).

2005-09-19  Steve Morris  <steve_morris at arcadyan dot com>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c: (gnet_conn_http_done):
	  Disable timeout when we have received all data.

2005-09-18  Daniel Gryniewicz  <dang at gentoo dot org>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* examples/echoclient-async.c: (async_client_sin_iofunc),
	(async_client_in_iofunc):
	* examples/echoclient-gconn.c: (ob_in_iofunc):
	* examples/echoclient-unix.c: (normal_echoclient):
	* examples/echoclient.c: (main):
	* examples/echoserver-async.c: (async_client_iofunc):
	* examples/echoserver-unix.c: (normal_echoserver),
	(async_client_iofunc):
	* examples/echoserver.c: (main):
	* examples/hfetch.c: (hfetch):
	* src/conn-http.c: (gnet_conn_http_conn_connected):
	  Fix compilation with -Werror on amd64 (mostly a simple
	  s/guint/gsize/ for the GIOChannel API that was changed
	  the same way in the GLib 1.2 => 2.0 transition).

2005-08-31  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c: (gnet_conn_http_conn_connected),
	(gnet_conn_http_conn_got_data):
	  Renew timeout when connected and whenever data is 
	  received (makes transfers that take longer than 
	  30 seconds work).

2005-08-31  Tim-Philipp Müller  <tim at centricular dot net>
